k8s-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensubot
  namespace: sensubot
  labels:
    app.kubernetes.io/name: sensubot
    app.kubernetes.io/instance: sensubot
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sensubot
      app.kubernetes.io/instance: sensubot
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sensubot
        app.kubernetes.io/instance: sensubot
    spec:
      containers:
        - name: sensubot
          image: "betorvs/sensubot:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9090
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /sensubot/v1/health
              port: 9090
          readinessProbe:
            httpGet:
              path: /sensubot/v1/health
              port: 9090
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
          - mountPath: "/certs-ca"
            name: sensu-ca-pem
            readOnly: true
      volumes:
        - name: sensu-ca-pem
          secret:
            secretName: sensu-ca-pem

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sensubot
  namespace: sensubot
  labels:
    app.kubernetes.io/name: sensubot
    app.kubernetes.io/instance: sensubot
spec:
  rules:
    - host: "sensubot.example.local"
      http:
        paths:
          - path: /sensubot/v1
            backend:
              serviceName: sensubot
              servicePort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: sensubot
  namespace: sensubot
  labels:
    app.kubernetes.io/name: sensubot
    app.kubernetes.io/instance: sensubot
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: sensubot
    app.kubernetes.io/instance: sensubot
